feat: mailname template, add ssl-cert package, test

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 
 exim4_package_name: exim4-daemon-light  # exim4-daemon-heavy
+exim4_mailname: "{{ ansible_nodename }}"
 
 exim4_dc_eximconfig_configtype: internet
 exim4_dc_other_hostnames: "{{ ansible_hostname }}"
