--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,10 +3,12 @@
 - name: update exim4.conf.template
   shell: update-exim4.conf.template -r
   notify: update exim4.conf
+  tags: skip_ansible_lint
 
 - name: update exim4.conf
   shell: /usr/sbin/update-exim4.conf
   notify: reload exim4
+  tags: skip_ansible_lint
 
 - name: reload exim4
   service: name=exim4 state=reloaded
